<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <string name="obb_app">An OBB App - com.example.android.obbapp</string>

    <string name="mount">Mount</string>
    <string name="unmount">Unmount</string>

    <string name="mountpath_label">Mount Path : </string>
    <string name="status_label">Status : </string>

    <string name="obb_already_mounted">OBB already mounted!</string>
    <string name="obb_not_mounted">OBB is not mounted!</string>

    <string name="failed_to_start_mount">Failed to start mount process...</string>
    <string name="failed_to_start_unmount">Failed to start unmount process...</string>

    <string name="attempting_mount">Attempting to mount...</string>
    <string name="attempting_unmount">Attempting to unmount...</string>
    
    <string name="package_name">Package Name : </string>
    <string name="obb_file">The OBB File : </string>
    <string name="file_amount">Amount of Files in OBB file : </string>
    <string name="file_name">File Name : </string>
    <string name="file_content">File Content : </string>
</resources>
