<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file describes the layout of the main SkeletonApp activity
     user interface.
 -->

<!-- The top view is a layout manager that places its child views into
     a row, here set to be vertical (so the first is at the top) -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button android:id="@+id/mount"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/mount" />

    <Button android:id="@+id/unmount"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/mount"
        android:text="@string/unmount" />

<!-- Status field -->
    <TextView android:id="@+id/status_label" android:layout_below="@+id/mount"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/status_label" />
        
    <TextView android:id="@+id/status" android:layout_below="@+id/mount"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/status_label" />

<!-- OBB File Path field -->
    <TextView android:id="@+id/obbfile_label" android:layout_below="@+id/status_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/obb_file" />
        
    <TextView android:id="@+id/obbfile" android:layout_below="@+id/status_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/obbfile_label" />
        
<!-- Package Name field -->
    <TextView android:id="@+id/packagename_label" android:layout_below="@+id/obbfile_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/package_name" />
        
    <TextView android:id="@+id/packagename" android:layout_below="@+id/obbfile_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/packagename_label" />

<!-- Mount Path field -->
    <TextView android:id="@+id/mountpath_label" android:layout_below="@+id/packagename_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/mountpath_label" />
        
    <TextView android:id="@+id/mountpath" android:layout_below="@+id/packagename_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/mountpath_label" />

<!-- File Amount field -->
    <TextView android:id="@+id/fileamount_label" android:layout_below="@+id/mountpath_label" 
        android:layout_height="wrap_content" android:layout_width="wrap_content" 
        android:text="@string/file_amount"></TextView>
        
    <TextView android:id="@+id/fileamount" android:layout_below="@+id/mountpath_label"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/fileamount_label"></TextView>
        
<!-- File Name field -->
    <TextView android:id="@+id/file_label" android:layout_below="@+id/fileamount_label" 
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true" 
        android:text="@string/file_name" ></TextView>

    <TextView android:id="@+id/file" android:layout_below="@+id/fileamount_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/file_label"></TextView>
       
<!-- File Content field -->
    <TextView android:id="@+id/filecontent_label" android:layout_below="@+id/file_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/file_content" ></TextView>

    <TextView android:id="@+id/filecontent" android:layout_below="@+id/file_label"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/filecontent_label" ></TextView>
        
    <Button android:id="@+id/nextfile" android:layout_below="@+id/filecontent_label" 
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="Next File"></Button>
</RelativeLayout>
